--- a/style.css
+++ b/style.css
@@ -59,4 +59,14 @@ body::before {
   background-color: transparent;
   color: #fff;
   padding: 20px;
+  font-size: 30px;
+  border: 2px solid orange;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.left-arrow {
+  left: calc(15vw - 65px);
+}
+.right-arrow {
+  right: calc(15vw - 65px);
 }
