--- a/style.css
+++ b/style.css
@@ -63,6 +63,10 @@ body::before {
   border: 2px solid orange;
   top: 50%;
   transform: translateY(-50%);
+  cursor: pointer;
+}
+.arrow:focus {
+  outline: none;
 }
 .left-arrow {
   left: calc(15vw - 65px);
